--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -332,7 +332,7 @@
                                 DefaultSelectedItems: |-
                                     ={
                                         Id: "0",
-                                        Text: "Svi dokumenti"
+                                        Text: "Svi tipovi"
                                     }
                                 DisplayMode: =DisplayMode.Edit
                                 Height: =Parent.Height
@@ -340,7 +340,7 @@
                                     =[
                                         {
                                             Id: "0",
-                                            Text: "Svi dokumenti"
+                                            Text: "Svi tipovi"
                                         },
                                         {
                                             Id: "01",
