--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -1493,7 +1493,7 @@
                             LayoutMinWidth: =320
                             OnChange: |
                                 =If(
-                                    !IsNumeric(inp_rezQty.Value) || Value(inp_rezQty.Value) < 0,
+                                    (!IsNumeric(inp_rezQty.Value) && !IsBlank(inp_rezQty.Value)) || Value(inp_rezQty.Value) < 0,
                                     Notify(
                                         "Unesite pozitivan broj.",
                                         NotificationType.Error,
@@ -1514,6 +1514,8 @@
                                     )
                                 );
                             Placeholder: ="Unesite LOT"
+                            Required: =true
+                            Type: ="Text"
                             Value: =Abs(NalogZaProdajuResEntry.Selected.Quantity_Completed)
                             Width: =150
                             X: =40
